--- a/result.html
+++ b/result.html
@@ -16,7 +16,7 @@
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light ">
             <a class="navbar-brand" href="https://www.geektrust.in/events/code-with-geektrust9">Code with Geektrust</a>
-            <button class="btn btn-warning" id="reset" onclick="location.href='findingfalcon.html'">Try Again</button>
+            <button class="btn btn-warning" id="reset" onclick="location.href='index.html'">Try Again</button>
         </nav>
 
         <div id="result">
